@@ -18,3 +18,11 @@ It remains possible to configure your own logging behavior by setting the `exclu
 In addition, the `SimpleMessageListenerContainer` consumer restart after such an exception is now logged at DEBUG level by default (previously INFO).
 A new method `logRestart()` has been added to the `ConditionalExceptionLogger` to allow this to be changed.
 See xref:amqp/receiving-messages/consumer-events.adoc[Consumer Events] and <<channel-close-logging>> for more information.
+
+[[x31-conn-backoff]]
+=== Connections Enhancement
+
+Connection Factory supported backoff policy when creating connection channel.
+See xref:amqp/connections.adoc[Choosing a Connection Factory] for more information.
+
+
